--- a/style.css
+++ b/style.css
@@ -79,6 +79,8 @@ body.dark {
   border: 4px solid var(--green-color);
 }
 
+/* aiguille */
+
 .indicator .hand {
   position: absolute;
   height: 130px;
@@ -99,4 +101,22 @@ body.dark {
   height: 100px;
   width: 8px;
   background: var(--black-color);
+}
+
+/* SWITCH */
+
+.mode-switch {
+  padding: 10px 20px;
+  border-radius: 8px;
+  font-size: 22px;
+  font-weight: 400;
+  display: inline-block;
+  color: var(--white-color);
+  background: var(--black-color);
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+  cursor: pointer;
+}
+
+.mode-switch:active {
+  transform: scale(0.98);
 }
